[gd_scene load_steps=7 format=3 uid="uid://d3xbayjo3i3b4"]

[ext_resource type="Script" path="res://scripts/ui/use_ui.gd" id="1_6awlg"]
[ext_resource type="FontFile" uid="uid://cf7ocurslf3ii" path="res://assets/font/VonwaonBitmap-12px.ttf" id="1_qsdar"]
[ext_resource type="Texture2D" uid="uid://cnmt67s0q0mo1" path="res://assets/Inventory_background.png" id="3_v3avs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mdn4"]
texture = ExtResource("3_v3avs")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3vk52"]
texture = ExtResource("3_v3avs")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ix13k"]
texture = ExtResource("3_v3avs")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="use_ui" type="Node2D"]
z_index = 10
scale = Vector2(2, 2)
script = ExtResource("1_6awlg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 11
offset_right = 32.0
offset_bottom = 42.0
mouse_filter = 0
theme_override_constants/separation = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
z_index = 11
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxTexture_0mdn4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0mdn4")
theme_override_styles/normal = SubResource("StyleBoxTexture_0mdn4")
text = "使用"

[node name="Button3" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxTexture_3vk52")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3vk52")
theme_override_styles/normal = SubResource("StyleBoxTexture_3vk52")
text = "装备"

[node name="Button2" type="Button" parent="VBoxContainer"]
z_index = 11
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxTexture_ix13k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ix13k")
theme_override_styles/normal = SubResource("StyleBoxTexture_ix13k")
text = "丢弃"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button2"]
visible = false
layout_mode = 0
offset_left = 34.5
offset_top = -24.0
offset_right = 102.5
offset_bottom = 43.0

[node name="delete_num" type="Label" parent="VBoxContainer/Button2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="NumSlider" type="HSlider" parent="VBoxContainer/Button2/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button2/VBoxContainer"]
layout_mode = 2

[node name="confirm" type="Button" parent="VBoxContainer/Button2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
text = "确认"

[node name="cancel" type="Button" parent="VBoxContainer/Button2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qsdar")
theme_override_font_sizes/font_size = 12
text = "取消"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="drag_ended" from="VBoxContainer/Button2/VBoxContainer/NumSlider" to="." method="_on_num_slider_drag_ended"]
[connection signal="pressed" from="VBoxContainer/Button2/VBoxContainer/HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
